update isolate-worker = false
用于修正由于使用docker ，anyconnect客户端的频繁重新连接

--- a/ocserv/ocserv.conf
+++ b/ocserv/ocserv.conf
@@ -149,7 +149,7 @@ ca-cert = /opt/certs/ca-cert.pem
 # system calls allowed to a worker process, in order to reduce damage from a
 # bug in the worker process. It is available on Linux systems at a performance cost.
 # The performance cost is roughly 2% overhead at transfer time (tested on a Linux 3.17.8).
-isolate-workers = true
+isolate-workers = false
 
 # A banner to be displayed on clients
 #banner = "Welcome"
